@@ -1,5 +1,11 @@
 2007-12-07  Guillem Jover  <guillem.jover@nokia.com>
 
+	* client/Makefile.am (PIE): Remove variable.
+	(maemo_client_CPPFLAGS): Add $(PIC).
+	(maemo_client_LDFLAGS): Rename $(PIE) to $(PIC). Add '-shared'.
+
+2007-12-07  Guillem Jover  <guillem.jover@nokia.com>
+
 	* client/client.c: Rewrite for Hildon 1.x.
 
 2007-12-04  Guillem Jover  <guillem.jover@nokia.com>
